Added HTML code to index.html, added JS screenshot images

--- a/index.html
+++ b/index.html
@@ -12,7 +12,53 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>Enter your HTML notes here</li>
+          <ul>
+            <li>The head element contains information about the webpage.</li>
+            <li>The body element represents the visible content shown to the user.</li>
+          </ul>
+        </ul>
+      </section>
+
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>Enter your CSS notes here</li>
+          <ul>
+            <li>CSS styles are used to control the appearance of webpages.</li>
+            <li>There are many CSS libraries available for use on the web</li>
+          </ul>
+        </ul>
+        
+      </section>
+   
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>Git is a versioning tool used to keep track of changes in repositories</li>
+          <li>Git allows multiple team members to work on the same codebase without conflicting with eachother</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>Javascript is a programming language used within webpages, and in other environments such as Node</li>
+          <li>Javascrips is home to many wonders such as this:
+            <br>
+            <img src="assets/js1.png"/>
+            <br>
+            and this:
+            <br>
+            <img src="assets/js2.png"/>
+            <br>
+            For further descent into madness, check out <a href="https://github.com/denysdovhan/wtfjs">this list of <i>interesting</i> Javascript code</a>
+          </li>
+        </ul>
+      </section>
     </main>
 
     <footer>
