--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
     <header id="top">
       <h1>Prework Study Guide</h1>
-      <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <img class="headerimg" src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
       <section class="card" id="html-section">
@@ -49,11 +50,11 @@
           <li>Javascript is a programming language used within webpages, and in other environments such as Node</li>
           <li>Javascrips is home to many wonders such as this:
             <br>
-            <img src="assets/js1.png"/>
+            <img class="jsimg" src="assets/js1.png"/>
             <br>
             and this:
             <br>
-            <img src="assets/js2.png"/>
+            <img class="jsimg" src="assets/js2.png"/>
             <br>
             For further descent into madness, check out <a href="https://github.com/denysdovhan/wtfjs">this list of <i>interesting</i> Javascript code</a>
           </li>
