Updated button text to make it's purpose more clear

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <p>I can code!</p>
       <p><div>
         <input style="display: block; margin: 5px auto;" id="prompt" type="text" placeholder="Enter page suggestion">
-        <button style="display: block; margin: 5px auto;" onclick="fetchNewContent();">I don't like this page :(</button>
+        <button style="display: block; margin: 5px auto;" onclick="fetchNewContent();">Generate a new page</button>
       </div></p>
     </footer>
   </body>
