--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <li>Allows logic to be included on a webpage for rich user interactions and advanced webapp functionality</li>
           <li>A dynamic, interpreted, high-level and object-orientated language</li>
           <li>Shares similarities in syntax to C/C++</li>
-          <li>Javascrips is home to many wonders such as this:
+          <li>Javascript is home to many wonders such as this:
             <br>
             <img class="jsimg" src="assets/js1.png"/>
             <br>
